<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_edit"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.danie.mymovieproject.AddEditActivity"
    android:weightSum="6.4">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:id="@+id/subject_tv"
            android:layout_weight="1"
            android:hint="@string/subject_tv"
            android:textSize="24sp"
            android:layout_height="match_parent"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/subject_et"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:layout_weight="3" />

    </LinearLayout>

    <TextView
        android:text="@string/body_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/body_tv"
        android:layout_weight="0.7"
        android:textSize="24sp" />

    <EditText
        android:layout_width="match_parent"
        android:inputType="textMultiLine|textPersonName"
        android:ems="10"
        android:id="@+id/body_et"
        android:layout_weight="1.4"
        android:fontFamily="casual"
        android:textSize="24sp"
        android:layout_height="0dp"
        android:gravity="top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4">

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:numStars="10"
            android:isIndicator="false" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:weightSum="3">

        <TextView
            android:text="@string/url_tv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:id="@+id/url_tv"
            android:layout_alignParentLeft="true"
            android:layout_weight="0.3"
            android:textSize="24sp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/url_et"
            android:layout_weight="2"
            android:textSize="24sp"
            android:fontFamily="casual" />

        <Button
            android:text="@string/show_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/show_btn"
            android:layout_weight="0.7" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:srcCompat="@drawable/noimage"
        android:id="@+id/imageView"
        android:layout_weight="2" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ok_btn"
            android:layout_weight="1"
            android:text="@string/ok_btn" />

        <Button
            android:text="@string/cancel_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cancel_btn"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
